<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="purchase_string">Purchase Image</string>
    <string name="appId">52c74e179ddc3561b816fb4b</string>
    <string name="appSignature">33f5110a725d1878faca8e214c473c5c808acbd1</string>
    <string name="appPublicKey"></string>
    <string name="consumable_sku">com.example.inappdemo.fireworks</string>
    <string name="buy_string">Buy a click</string>
    <string name="clickme_string">Click Me</string>
    <string name="trackMiscRevenueGeneratingEventOfType">Misc Revenue</string>
    <string name="trackCustomEventOfType">Custom Event</string>
    <string name="trackInGameScore">Game Score</string>
    <string name="trackPlayerCurrencyBalance">Currency Balance</string>
    <string name="load_interstitial">Load Interstitial</string>
    <string name="preload_interstitial">Preload Interstitial</string>
    <string name="load_inplay">Load InPlay</string>
    <string name="prefetch">Video Prefetch</string>
    <string name="preload_inplay">Preload InPlay</string>
    <string name="load_video">Load Rewarded Video</string>
    <string name="preload_video">Preload Rewarded Video</string>
    <string name="more_apps">Load More Apps</string>
    <string name="preload_more_apps">Preload More Apps</string>
    <string name="clear_preload_data">Clear Preload Data</string>
    <string name="record_purchase">Record Purchase</string>
    <string name="app_name">InAppPurchase</string>
    <string name="run_tests">Run Tests</string>
    <string name="track_event">Track Event</string>
    <string name="goto_pit">Google IAP</string>
    <string name="goto_amazoniap">Amazon IAP</string>
    <string name="goto_store">Go To Store</string>
    <string name="goto_b">Go To Test B</string>
    <string name="goto_c">InPlay</string>
    <string name="goto_store_view">Go To Store View</string>
    <string name="goto_a">Go To Test A</string>
    <string name="goto_test">Go To Unit Tests</string>
    <string name="earn">Earn Coins</string>
    <string name="spend">Spend Coins</string>
    <string name="reset_store">Reset Store</string>
    <string name="print_balances">Print Balances</string>
    <string name="show_store">Show Store</string>
    <string name="imp_use_act">Impressions Use Activities</string>
    <string name="base64EncodedPublicKey">MIIBIjANBgkqhkiG9w0BAQEFAAOCAQ8AMIIBCgKCAQEAomv72ow5Yv4eA9r56NZFfHpDru/A42RcuwS1EOzhLKq6sQrUxbGsDreR0rT8TsI36QdWhumH/ltyS5idt8TWRR4S6CLHgVoL+u42KeW6xA2Tz+1RoJ4N3umg6LpELzWQl4owN5MH9kfeSIi3WIpKKmHJO6GOT+O+y8ph6CJnCqXqlKONxH0Mdhc58ANjuv+ZHzjsdZVDl2NTX7OKzm5PD2bXXdtLu1X6eLoKfbDWCODgynAdQjJHFs4Ag+qEt/s3BGHllJPrhK7uy9B7NdhqboCivufjEqVtB8aKcv2Uklv7Fselj2ZLku9Hs8lfOSginKfiNiYe5CKlFZjBTtb7vwIDAQAB</string>
    
    <!-- Taken from Amazon sample app SDK  -->
    <string name="action_settings">Settings</string>
    <string name="buy_orange">Buy Orange</string>
    <string name="i_have">I have</string>
    <string name="zero">0</string>
    <string name="oranges">orange(s)</string>
    <string name="eat_orange">Eat Orange</string>
    <string name="i_ate">I ate</string>
    <string name="oranges_already">orange(s) already</string>
</resources>
