<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <Button
        android:id="@+id/buy_orange_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buy_orange" 
        android:onClick="onBuyOrangeClick" />
        
    <LinearLayout
        android:id="@+id/have_oranges"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/buy_orange_button"
        android:orientation="horizontal"
        android:padding="5dp">
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24.5sp"
            android:text="@string/i_have" />
        
        <TextView
            android:id="@+id/num_oranges"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24.5sp"
            android:padding="5dp"
            android:text="@string/zero" />
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24.5sp"
            android:text="@string/oranges" />
        
    </LinearLayout>

    <Button
        android:id="@+id/eat_orange_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/eat_orange" 
        android:layout_below="@id/have_oranges"
        android:onClick="onEatOrangeClick" />
        
    <LinearLayout
        android:id="@+id/oranges_consumed"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/eat_orange_button"
        android:orientation="horizontal"
        android:padding="5dp">
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24.5sp"
            android:text="@string/i_ate" />
        
        <TextView
            android:id="@+id/num_oranges_consumed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24.5sp"
            android:padding="5dp"
            android:text="@string/zero" />
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24.5sp"
            android:text="@string/oranges_already" />
        
    </LinearLayout>
    
</RelativeLayout>
